add error list to response introduce create user integration test